# Chatbot-ECommerce

./: README.md  app.py  dev.py  main.py  pyproject.toml  semantic_router.ipynb  tests.ipynb
bot/: chatbot.py
chains/: product_info.py
cobuy/: __init__.py
cobuy/chatbot/: __init__.py  bot.py  dev_bot.py  memory.py
cobuy/chatbot/agents/: order_agent.py
cobuy/chatbot/chains/: base.py  chitchat.py  create_order.py  get_order.py  product_info.py  router.py
cobuy/chatbot/rag/: rag.py
cobuy/chatbot/router/: auxiliar.py  generate_intentions.ipynb  layer.json  new_intentions.json  train_evaluate_router.ipynb
cobuy/chatbot/tools/: create_order.py  get_order.py
cobuy/data/: loader.py
cobuy/data/database/: ecommerce.db
cobuy/data/pdfs/: generate_embeddings.py
tests/: README.md
